Forcing antialiased font rendering in Safari to try and fix the flickering text issue.

--- a/dev/webapp/css/base.css
+++ b/dev/webapp/css/base.css
@@ -13,9 +13,7 @@ html, body {
 	font-family: sans-serif;
 	font-size: 12px !important;
 	
-	-webkit-text-size-adjust: 100%;
-	-ms-text-size-adjust: none;
-	text-size-adjust: 100%;
+	-webkit-font-smoothing: antialiased !important;
 }
 
 /* ===== Utilities ===== */
